changes: altered development environment in config.js added pg-hstore package to modules. changed renderUnsers in attempt to get data down from heroku db

--- a/.env
+++ b/.env
@@ -10,4 +10,8 @@ DATABASE_URL=postgres://ljlegtxeqqnfnn:80efad09cd67a784f64741ff73e759ce87f11f73e
 
 APP_URL=
 
+PORT=3002
+
 APP_SECRET=
+
+LOCAL_DB=postgres://postgres:postgress@127.0.0.1:5432/gtl_users
