--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "pg": "^8.2.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.9"
   },
   "devDependencies": {},
