--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server-main.js",
-    "dev": "nodemon server-main.js"
+    "start:dev": "nodemon server-main.js"
   },
   "repository": {
     "type": "git",
