--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-spotify": "^1.1.0",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "qs": "^6.9.4",
@@ -24,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server-main.js",
-    "start:dev": "nodemon server-main.js"
+    "dev": "nodemon server-main.js"
   },
   "repository": {
     "type": "git",
