--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg-hstore": "^2.3.3",
     "qs": "^6.9.4",
     "randomstring": "^1.1.5",
+    "request": "^2.88.2",
     "sequelize": "^5.21.9",
     "spotify-web-api-node": "^4.0.0"
   },
